Improve QoC of first iteration

--- a/src/main/resources/templates/store/client/login.html
+++ b/src/main/resources/templates/store/client/login.html
@@ -15,6 +15,6 @@
 <p style="color: red;" th:if="${error}" th:text="${error}"></p>
 
 <p>Vous ne possédez pas de compte ?</p>
-<a href="store/client/register">Créer un compte</a>
+<a href="/store/client/register">Créer un compte</a>
 </body>
 </html>
