--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -4,13 +4,12 @@
 
 <div th:if="${session.client}">
     <p>Bienvenue, <span th:text="${session.client.prenom}"></span> <span th:text="${session.client.nom}"></span> !</p>
-    <a th:href="@{/store/client/logout}">Se déconnecter</a>
+    <a href="/store/client/logout">Se déconnecter</a>
 </div>
 <div th:unless="${session.client}">
-    <a th:href="@{/store/client/login}">Se connecter</a>
+    <a href="/store/client/register">Se connecter</a>
 </div>
 
-<a href="/store/client/login">Connexion</a>
 <a href="/store/client/register">Création d'un compte</a>
 
 <a href="/store/init">Initialiser les données</a>
