--- a/src/main/resources/templates/store/client/login.html
+++ b/src/main/resources/templates/store/client/login.html
@@ -1,20 +1,24 @@
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Connexion</title>
-</head>
-<body>
-<h1>Connexion</h1>
-<form action="/store/client/login" method="post">
-    Email : <input type="email" name="email" placeholder="Email" required/>
-    <br>
-    Mot de passe :<input type="password" name="password" placeholder="Mot de passe" required/>
-    <br>
-    <button type="submit">Se connecter</button>
-</form>
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
+    <head th:replace="~{fragments/head :: common_head('Connexion')}"></head>
 
-<p style="color: red;" th:if="${error}" th:text="${error}"></p>
+    <body>
+        <header th:replace="~{fragments/header :: common_header}"></header>
 
-<p>Vous ne possédez pas de compte ?</p>
-<a href="/store/client/register">Créer un compte</a>
-</body>
+        <h1>Connexion</h1>
+        <form action="/store/client/login" method="post">
+            Email : <input type="email" name="email" placeholder="Email" required/>
+            <br>
+            Mot de passe :<input type="password" name="password" placeholder="Mot de passe" required/>
+            <br>
+            <button type="submit">Se connecter</button>
+        </form>
+
+        <p style="color: red;" th:if="${error}" th:text="${error}"></p>
+
+        <p>Vous ne possédez pas de compte ?</p>
+        <a href="/store/client/register">Créer un compte</a>
+
+        <footer th:replace="~{fragments/footer :: common_footer}"></footer>
+    </body>
+    </body>
 </html>
