--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -4,7 +4,12 @@
     <body>
         <header th:replace="~{fragments/header :: common_header}"></header>
 
-        <h1>Bienvenue dans la boutique !</h1>
+        <div class="container">
+            <h1>Bienvenue dans la boutique !</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consequuntur culpa cum dicta
+                dignissimos earum facere impedit, minus nemo non nostrum numquam perferendis qui quidem quos, sit velit
+                veniam veritatis!</p>
+        </div>
 
         <footer th:replace="~{fragments/footer :: common_footer}"></footer>
     </body>
