--- a/src/main/resources/templates/store/article/index.html
+++ b/src/main/resources/templates/store/article/index.html
@@ -1,22 +1,25 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
-    <head th:replace="~{fragments/head :: common_head('Articles')}"></head>
+	<head th:replace="~{fragments/head :: common_head('Articles')}"></head>
 
-    <body>
-        <header th:replace="~{fragments/header :: common_header}"></header>
+	<body>
+		<header th:replace="~{fragments/header :: common_header}"></header>
 
-        <h1>Articles</h1>
+		<div class="container">
 
-        <div id="articles">
-            <div th:each="article: ${articles}">
-                Libelle : <span th:text="${article.getLibelle()}"></span>
-                Prix : <span th:text="${article.getPrix()}"></span>
-                Quantité en stock : <span th:text="${article.getQuantite()}"></span>
-            </div>
-        </div>
+			<h1>Articles</h1>
 
-        <a href="">Ajouter un article</a>
+			<div id="articles">
+				<div th:each="article: ${articles}">
+					Libelle : <span th:text="${article.getLibelle()}"></span>
+					Prix : <span th:text="${article.getPrix()}"></span>
+					Quantité en stock : <span th:text="${article.getQuantite()}"></span>
+				</div>
+			</div>
 
-        <footer th:replace="~{fragments/footer :: common_footer}"></footer>
-    </body>
-    </body>
+			<a href="">Ajouter un article</a>
+
+		</div>
+		<footer th:replace="~{fragments/footer :: common_footer}"></footer>
+	</body>
+	</body>
 </html>
