--- a/src/main/resources/templates/store/client/successfull-login.html
+++ b/src/main/resources/templates/store/client/successfull-login.html
@@ -1,13 +1,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
-    <head th:replace="~{fragments/head :: common_head('Connexion réussie')}"></head>
+	<head th:replace="~{fragments/head :: common_head('Connexion réussie')}"></head>
 
-    <body>
-        <header th:replace="~{fragments/header :: common_header}"></header>
+	<body>
+		<header th:replace="~{fragments/header :: common_header}"></header>
 
-        <h1>Vous êtes connecté avec succès !</h1>
-        <p>Heureux de vous revoir, <span th:text="${prenom}"></span> <span th:text="${nom}"></span> !</p>
-        <a href="/store/home">Retour à l'accueil</a>
+		<div class="container">
 
-        <footer th:replace="~{fragments/footer :: common_footer}"></footer>
-    </body>
+			<h1>Vous êtes connecté avec succès !</h1>
+			<p>Heureux de vous revoir, <span th:text="${prenom}"></span> <span th:text="${nom}"></span> !</p>
+			<a href="/store/home">Retour à l'accueil</a>
+		</div>
+		<footer th:replace="~{fragments/footer :: common_footer}"></footer>
+	</body>
 </html>
