--- a/src/main/resources/templates/store/client/successfull-register.html
+++ b/src/main/resources/templates/store/client/successfull-register.html
@@ -1,13 +1,16 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
-    <head th:replace="~{fragments/head :: common_head('Inscription réussie')}"></head>
+	<head th:replace="~{fragments/head :: common_head('Inscription réussie')}"></head>
 
-    <body>
-        <header th:replace="~{fragments/header :: common_header}"></header>
+	<body>
+		<header th:replace="~{fragments/header :: common_header}"></header>
 
-        <h1>Compte créé avec succès !</h1>
-        <p>Bienvenue, <span th:text="${prenom}"></span> <span th:text="${nom}"></span> !</p>
-        <a href="/store/home">Retour à l'accueil</a>
+		<div class="container">
 
-        <footer th:replace="~{fragments/footer :: common_footer}"></footer>
-    </body>
+			<h1>Compte créé avec succès !</h1>
+			<p>Bienvenue, <span th:text="${prenom}"></span> <span th:text="${nom}"></span> !</p>
+
+			<a href="/store/home">Retour à l'accueil</a>
+		</div>
+		<footer th:replace="~{fragments/footer :: common_footer}"></footer>
+	</body>
 </html>
