--- a/src/main/resources/templates/store/client/login.html
+++ b/src/main/resources/templates/store/client/login.html
@@ -7,12 +7,20 @@
 		<div class="container">
 
 			<h1>Connexion</h1>
-			<form action="/store/client/login" method="post">
-				Email : <input type="email" name="email" placeholder="Email" required/>
-				<br>
-				Mot de passe :<input type="password" name="password" placeholder="Mot de passe" required/>
-				<br>
-				<button type="submit">Se connecter</button>
+			<form action="/store/client/login" method="post" class="form-container">
+				<div class="form-group">
+					<label for="email">Email :</label>
+					<input type="email" id="email" name="email" placeholder="Entrez votre email" required>
+				</div>
+				<div class="form-group">
+					<label for="password">Mot de passe :</label>
+					<input type="password"
+						   id="password"
+						   name="password"
+						   placeholder="Entrez votre mot de passe"
+						   required>
+				</div>
+				<button type="submit" class="btn-submit">Se connecter</button>
 			</form>
 
 			<p style="color: red;" th:if="${error}" th:text="${error}"></p>
@@ -21,6 +29,5 @@
 			<a href="/store/client/register">Créer un compte</a>
 		</div>
 		<footer th:replace="~{fragments/footer :: common_footer}"></footer>
-	</body>
 	</body>
 </html>
