--- a/src/main/resources/templates/store/client/register.html
+++ b/src/main/resources/templates/store/client/register.html
@@ -7,16 +7,30 @@
 		<div class="container">
 
 			<h1>Création d'un compte !</h1>
-			<form action="/store/client/create" method="post">
-				Email : <input type="email" name="email" id="email" placeholder="Email">
-				Password : <input type="password" name="password" id="password" placeholder="Mot de passe">
-				Nom : <input type="text" name="nom" id="nom" placeholder="Nom">
-				Prénom : <input type="text" name="prenom" id="prenom" placeholder="Prénom">
-				<input type="submit">
+			<form action="/store/client/create" method="post" class="form-container">
+				<div class="form-group">
+					<label for="email">Email :</label>
+					<input type="email" name="email" id="email" placeholder="Entrez votre email">
+				</div>
+				<div class="form-group">
+					<label for="password">Mot de passe :</label>
+					<input type="password" name="password" id="password" placeholder="Entrez votre mot de passe">
+				</div>
+				<div class="form-group">
+					<label for="nom">Nom :</label>
+					<input type="text" name="nom" id="nom" placeholder="Entrez votre nom">
+				</div>
+				<div class="form-group">
+					<label for="prenom">Prénom :</label>
+					<input type="text" name="prenom" id="prenom" placeholder="Entrez votre prénom">
+				</div>
+				<button type="submit" class="btn-submit">S'inscrire</button>
 			</form>
+
+			<p>Vous possédez déjà un compte ?</p>
+			<a href="/store/client/register">Se connecter</a>
 
 		</div>
 		<footer th:replace="~{fragments/footer :: common_footer}"></footer>
-	</body>
 	</body>
 </html>
