--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -87,7 +87,7 @@ footer {
 
 .form-group input {
 	padding: 10px;
-	border: 1px solid #ccc;
+	border: 1px solid #CCC;
 	border-radius: 10px;
 	font-size: 1rem;
 }
@@ -106,4 +106,10 @@ footer {
 
 .btn-submit:hover {
 	background: #1C4180;
+}
+
+.commande {
+	border: 4px solid #E4E4E4;
+	padding: 1rem;
+	margin-bottom: 1rem;
 }
