--- a/src/main/resources/templates/store/client/login.html
+++ b/src/main/resources/templates/store/client/login.html
@@ -10,7 +10,7 @@
 			<form action="/store/client/login" method="post" class="form-container">
 				<div class="form-group">
 					<label for="email">Email :</label>
-					<input type="email" id="email" name="email" placeholder="Entrez votre email" required>
+					<input type="email" id="email" name="email" placeholder="Entrez votre email" value="miage@univ-lille.fr" required>
 				</div>
 				<div class="form-group">
 					<label for="password">Mot de passe :</label>
@@ -18,6 +18,7 @@
 						   id="password"
 						   name="password"
 						   placeholder="Entrez votre mot de passe"
+						   value="miage"
 						   required>
 				</div>
 				<button type="submit" class="btn-submit">Se connecter</button>
