Add possibility to add an article in command

--- a/src/main/resources/templates/store/commande/index.html
+++ b/src/main/resources/templates/store/commande/index.html
@@ -12,11 +12,11 @@
 
 			<form action="/store/commande/create" method="post" class="form-container">
 				<div class="form-group">
-					<label for="nom">Email :</label>
+					<label for="nom">Nom :</label>
 					<input type="text" id="nom" name="nom" placeholder="Entrez un nom" required>
 				</div>
 
-				<button type="submit" class="btn-submit">Se connecter</button>
+				<button type="submit" class="btn-submit">Ajouter la commande</button>
 			</form>
 
 			<h2>Mes commandes</h2>
