--- a/src/main/resources/templates/store/commande/index.html
+++ b/src/main/resources/templates/store/commande/index.html
@@ -6,6 +6,8 @@
 
 		<div class="container">
 
+			<div th:replace="~{fragments/message :: flash_messages}"></div>
+
 			<h1>Commandes</h1>
 
 			<h2>Création d'une commande</h2>
