--- a/src/main/resources/templates/store/commande/show.html
+++ b/src/main/resources/templates/store/commande/show.html
@@ -6,31 +6,38 @@
 
 		<div class="container">
 
+			<div th:replace="~{fragments/message :: flash_messages}"></div>
+
 			<h1>Commandes</h1>
 
-<!--	Afficher seulement si editMode == True		-->
-			<h2>Ajouter un article à votre commande</h2>
+			<div th:if="${editMode}">
+				<h2>Ajouter un article à votre commande</h2>
 
-			<form th:action="@{/store/commande/{id}/edit(id=${commande.id})}" method="post" class="form-container">
-				<div class="form-group">
-					<label for="libelle">Libellé :</label>
-					<input type="text" id="libelle" name="libelle" placeholder="Entrez un libellé" required>
-				</div>
+				<form th:action="@{/store/commande/{id}/edit(id=${commande.id})}" method="post" class="form-container">
+					<div class="form-group">
+						<label for="libelle">Libellé :</label>
+						<input type="text" id="libelle" name="libelle" placeholder="Entrez un libellé" required>
+					</div>
 
-				<div class="form-group">
-					<label for="prix">Prix :</label>
-					<input type="number" min="0" id="prix" name="prix" placeholder="Entrez un prix" required>
-				</div>
+					<div class="form-group">
+						<label for="prix">Prix :</label>
+						<input type="number" min="0" id="prix" name="prix" placeholder="Entrez un prix" required>
+					</div>
 
-				<div class="form-group">
-					<label for="quantite">Quantité :</label>
-					<input type="number" min="1" id="quantite" name="quantite" placeholder="Entrez une quantité" required>
-				</div>
+					<div class="form-group">
+						<label for="quantite">Quantité :</label>
+						<input type="number"
+							   min="1"
+							   id="quantite"
+							   name="quantite"
+							   placeholder="Entrez une quantité"
+							   required>
+					</div>
 
-				<button type="submit" class="btn-submit">Ajouter l'article</button>
-			</form>
+					<button type="submit" class="btn-submit">Ajouter l'article</button>
+				</form>
+			</div>
 
-<!--	Fin condition		-->
 			<h2>Votre commande</h2>
 
 			<div id="commande">
