--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -5,7 +5,11 @@
 		<header th:replace="~{fragments/header :: common_header}"></header>
 
 		<div class="container">
+
+			<div th:replace="~{fragments/message :: flash_messages}"></div>
+
 			<h1>Bienvenue dans la boutique !</h1>
+
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consequuntur culpa cum dicta
 				dignissimos earum facere impedit, minus nemo non nostrum numquam perferendis qui quidem quos, sit velit
 				veniam veritatis!</p>
