--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,3 +1,4 @@
 <footer th:fragment="common_footer">
-	<p>Copyright © 2025 - Projet Master M1 MIAGE - CAR - Aymeric JAKOBOWSKI</p>
+	<p>© 2025 - Projet Master M1 MIAGE - CAR</p>
+	<p>Développé par <strong>Aymeric JAKOBOWSKI</strong></p>
 </footer>
