--- a/src/main/resources/templates/store/home.html
+++ b/src/main/resources/templates/store/home.html
@@ -10,9 +10,10 @@
 
 			<h1>Bienvenue dans la boutique !</h1>
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi consequuntur culpa cum dicta
-				dignissimos earum facere impedit, minus nemo non nostrum numquam perferendis qui quidem quos, sit velit
-				veniam veritatis!</p>
+			<div class="dev-zone">
+				<h2>Zone de développement</h2>
+				<a th:href="@{/store/init}">Initialiser les données</a>
+			</div>
 		</div>
 
 		<footer th:replace="~{fragments/footer :: common_footer}"></footer>
