--- a/src/main/resources/templates/store/commande/index.html
+++ b/src/main/resources/templates/store/commande/index.html
@@ -31,7 +31,7 @@
 
 					<h2 th:text="${commande.getNom()}"></h2>
 
-					<table border="1">
+					<table>
 						<thead>
 							<tr>
 								<th>Libellé</th>
